[package]
name = "zb"
version = "0.1.0"
edition = "2024"
license = "AGPL-3"

[dependencies]
clap = { version = "4.5.20", default-features = false, features = ["derive", "std", "help", "usage", "color", "error-context"] }
nix = { version = "0.30.1", features = ["process", "ptrace", "signal", "feature", "fs"] }
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
colored = { version = "3.0.0", default-features = false }
workload_sim = { path = "./tests/workload_sim" }
